2001-02-20
----------
* released 1.0.1
* some documentation fixes (Tobi)

2001-02-19
----------
* begun TROUBLESHOOTING section in gedafe-user.pod
* added ACCESS RIGHTS section in gedafe-sql.pod

2001-02-17
----------
* deleted compatibility code for old meta_tables and meta_fields
* improved cookies: path is set and script-name is encoded in cookie name, such
  that there should be no conflicts with other Gedafe applications
* app_site and app_path are not anymore used
  (wrong_url.html template is obsolete)
* gedafed: SITE accepts only one argument (url of the site)
* changed example templates to use DATABASE_DESC to make them not demo-specific
  (as suggested by Brook Milligan <brook@biology.nmsu.edu>)
* new template variable: DATABASE_DESC (COMMENT on database)
* added usage information to gedafe-ctl (daemon-ctl)

2001-02-13
----------
* continue minor internal restructuration started on 2001-02-08
* improve error reporting

2001-02-11
----------
* fix the encoding of values in urls for reedit_data. Use '!' instead of '%'.
* fix searching a filterfirst-filtered view

2001-02-08
----------
* minor internal restructuration
* errors are now mostly reported on the web instead of stderr
  (apache's error_log). this uses a new template called 'error.html'

2001-01-27
----------
* searches match now substrings and are case insensitive
* Start.pm: use CGI 2.00 qw(-compile :cgi);

2001-01-24
----------
* released version 1.0.0
* added example/useful-functions.sql (tobi)

2001-01-23 Fritz
----------
* Some modifications in the documentation.

2000-12-18
----------
* Use quotes everywhere for HTML attributes in form fields.

2000-12-12
----------
* added support for 'timestamp' datatype

2000-12-10
----------
* fixed acl handling. It works now for users with multiple groups
* released version 0.9.16
* Changed meta_fields and meta_tables to use attribute/value instead of
  columns. The old format is still supported for compatibility.

2000-12-09
----------