@@ -12,7 +12,7 @@ TARFILE = gedafe-$(VERSION).tar.gz
 
 release: release-tag tarball
 
-tarball:  doc/gedafe-sql.txt doc/gedafe-user.txt doc/cpptemplate.txt
+tarball: doc
 	shtool mkdir -p gedafe-$(VERSION)
 	$(GNUTAR) -T MANIFEST -cf - | (cd gedafe-$(VERSION) && $(GNUTAR) xf -)
 	$(GNUTAR) --mode=g-s -czvf pub/$(TARFILE) gedafe-$(VERSION)
@@ -24,6 +24,8 @@ release-tag:
 release-tag-force:
 	cvs tag -F v$(MAJOR)_$(MINOR)_$(MMINOR)
 
+doc: doc/gedafe-sql.txt doc/gedafe-user.txt doc/cpptemplate.txt
+
 doc/cpptemplate.txt:
 	pod2man --release=0.3 --center=gedafe lib/perl/Text/CPPTemplate.pm >pod2txt.tmp
 	groff -man -Tascii -P-u -P-b -P-o pod2txt.tmp > $@
@@ -33,3 +35,5 @@ doc/cpptemplate.txt:
 	pod2man --release=$(VERSION) --center=gedafe $<  >pod2txt.tmp
 	groff -man -Tascii -P-u -P-b -P-o pod2txt.tmp > $@
 	rm pod2txt.tmp
+
+.PHONY: release doc tarball release-tag release-tag-force
