@@ -1,5 +1,5 @@
 <TABLE WIDTH="100%" 
-#if ##USER## = isgroot
+#if ##USER## = admin
 
 bgcolor="#ffee00"
 #else
